Changelog
=========


2.8.3 (unreleased)
------------------

- Nothing changed yet.


2.8.2 (2016-11-16)
------------------

- Fix daylight savings issue in p.a.events' start / end. [jone]


2.8.1 (2016-11-14)
------------------

- Backreferences: awoid error with broken references. [jone]


2.8.0 (2016-11-08)
------------------

- Generally support RichTextValue as value type.
  [mathias.leimgruber]


2.7.4 (2016-10-21)
------------------

- Fix plone.app.event timezone problems. [jone]

- Support timezones. [jone]


2.7.3 (2016-09-26)
------------------

- Publish layout property on plone root. But do not touch other properties.
  [mathias.leimgruber]


2.7.2 (2016-08-16)
------------------

- Implement ftw.simplelayout block properties support.
  Allow setting a different view name.
  [mathias.leimgruber]


2.7.1 (2016-07-26)
------------------

- Fix error when publishing DX relation with no target. [jone]


2.7.0 (2016-03-30)
------------------

- Add data collector for Products.PloneFormGen fields.
  [elioschmutz]

- Add data collector for ftw.servicenavigation data. [jone]


2.6.0 (2015-12-23)
------------------

- Blocks of ftw.contentpage will no longer published directly
  after deleting.
  Backport for ftw.contentpage of functionality provided for ftw.simplelayout:
  [elioschmutz]

- Publish visible state on portlets.
  [lknoepfel]


2.5.0 (2015-09-30)
------------------

- Prevent "ValueError: Description must be unicode." for dexterity objects.
  [jone]

- Add support for PersistentList and PersistentMapping in decode_for_json-utility.
  [elioschmutz, mbaechtold]

- Drop Plone 4.2 support.
  [jone]

- Add support for portlet assignment classes which are not named "Assignment".
  [jone]

- Add ftw.simplelayout support (page and block states).
  [jone]

- Keep tuple / set types when sending data.
  [jone]

- Support dexterity relations.
  [jone]


2.4.1 (2014-12-02)
------------------
